[package]
name = "rs-crypto"
version = "0.1.0"
authors = ["ph04"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.3"
rand = "0.7.0"
hex-literal = "0.3.1"
chrono = "0.4"

[dependencies.ed25519-dalek]
version = "1"
